--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -659,6 +659,9 @@
   "missingYourTokens": {
     "message": "Don't see your tokens?"
   },
+  "minutesShorthand": {
+    "message": "Min"
+  },
   "myAccounts": {
     "message": "My Accounts"
   },
@@ -990,6 +993,12 @@
   },
   "secretPhrase": {
     "message": "Enter your secret twelve word phrase here to restore your vault."
+  },
+  "newPassword8Chars": {
+    "message": "New Password (min 8 chars)"
+  },
+  "secondsShorthand": {
+    "message": "Sec"
   },
   "seedPhraseReq": {
     "message": "Seed phrases are 12 words long"
