--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -397,6 +397,9 @@
   "failed": {
     "message": "Failed"
   },
+  "feeChartTitle": {
+    "message": "Live Transaction Fee Predictions"
+  },
   "fiat": {
     "message": "Fiat",
     "description": "Exchange type"
@@ -450,6 +453,9 @@
   },
   "gasPrice": {
     "message": "Gas Price (GWEI)"
+  },
+  "gasPriceNoDenom": {
+    "message": "Gas Price"
   },
   "gasPriceCalculation": {
     "message": "We calculate the suggested gas prices based on network success rates."
@@ -730,6 +736,9 @@
   },
   "newTotal": {
     "message": "New Total"
+  },
+  "newTransactionFee": {
+    "message": "New Transaction Fee"
   },
   "next": {
     "message": "Next"
@@ -1231,6 +1240,9 @@
   },
   "transactionNumber": {
     "message": "Transaction Number"
+  },
+  "transactionTime": {
+    "message": "Transaction Time"
   },
   "transfer": {
     "message": "Transfer"
