Integrate gas buttons with the send screen.

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -82,6 +82,9 @@
   "available": {
     "message": "Available"
   },
+  "average": {
+    "message": "Average"
+  },
   "back": {
     "message": "Back"
   },
@@ -396,6 +399,9 @@
   },
   "failed": {
     "message": "Failed"
+  },
+  "fast": {
+    "message": "Fast"
   },
   "feeChartTitle": {
     "message": "Live Transaction Fee Predictions"
@@ -978,6 +984,15 @@
   "save": {
     "message": "Save"
   },
+  "slow": {
+    "message": "Slow"
+  },
+  "speedUpTitle": {
+    "message": "Speed Up Transaction"
+  },
+  "speedUpSubtitle": {
+    "message": "Increase your gas price to attempt to overwrite and speed up your transaction"
+  },
   "saveAsCsvFile": {
     "message": "Save as CSV File"
   },
@@ -1234,6 +1249,9 @@
   },
   "transactionErrorNoContract": {
     "message": "Trying to call a function on a non-contract address."
+  },
+  "transactionFee": {
+    "message": "Transaction Fee"
   },
   "transactionMemo": {
     "message": "Transaction memo (optional)"
