Clean up for advanced gas tab customization changes.

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1048,6 +1048,9 @@
   "send": {
     "message": "Send"
   },
+  "sendAmount": {
+    "message": "Send Amount"
+  },
   "sendETH": {
     "message": "Send ETH"
   },
