Redesign of gas customization basic tab.

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -406,6 +406,9 @@
   "fast": {
     "message": "Fast"
   },
+  "fastest": {
+    "message": "FASTEST"
+  },
   "feeChartTitle": {
     "message": "Live Transaction Fee Predictions"
   },
